--- a/timesheet/templates/base.html
+++ b/timesheet/templates/base.html
@@ -73,9 +73,8 @@
     <footer class="footer">
         <div class="content has-text-left	is-size-6">
             <p>
-                <strong>Timesheet</strong> desenvolvido por <a
-                    href="https://www.linkedin.com/in/uesleicarvalhoo/">Ueslei
-                    Carvalho</a>.
+                <strong>Timesheet</strong> developed by  <a
+                    href="https://www.linkedin.com/in/">adasdasda</a>.
             </p>
         </div>
     </footer>
